Login,Register,Home finished
完成对这三个界面的第一版本

--- a/INS-CLONE/.vscode/settings.json
+++ b/INS-CLONE/.vscode/settings.json
@@ -11,5 +11,6 @@
     },
     "accessibility.signals.progress": {
         "sound": "off"
-    }
+    },
+    "accessibility.signalOptions.volume": 0
 }
