--- a/INS-CLONE/frontend/package.json
+++ b/INS-CLONE/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.7",
     "create-vite": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
